--- a/index.html
+++ b/index.html
@@ -4,7 +4,7 @@
 	
 	<HEAD>
 	<title> Mi primera Página en repositorio</title>
-	<LINK  href="C:\mi trabajo\estilos.css" rel="StyleSheet" type="text/css" MEDIA=screen>
+	<LINK  href="estilos.css" rel="StyleSheet" type="text/css" MEDIA=screen>
 	</HEAD>
 	
 	<body>
@@ -25,7 +25,7 @@
 	
 	
 	
-	<center> <img src="C:\photo katherine.jpeg" width="200" height="250" align="rigth"></center>
+	<center> <img src="\photo katherine.jpeg" width="200" height="250" align="rigth"></center>
 	
 	<h1 align="center">CURRÍCULUM VITAE</H1>
 	<h1 align="center"> Katherine Marleny Lémus Reyes </H1>
