--- a/index.html
+++ b/index.html
@@ -25,7 +25,7 @@
 	
 	
 	
-	<center> <img src="C:\mi trabajo\tools\photo katherine.jpeg" width="200" height="250" align="rigth"></center>
+	<center> <img src="c:\mi trabajo\tools\myphoto.jpg" width="200" height="250" align="rigth"></center>
 	
 	<h1 align="center">CURRÍCULUM VITAE</H1>
 	<h1 align="center"> Katherine Marleny Lémus Reyes </H1>
