agreguelos index de las demas paginas

--- a/index.html
+++ b/index.html
@@ -10,14 +10,13 @@
 	<body>
 	<header>
 	
-		<nav class="navegacion">
-			<ul class="menu">
+			<ul class="navbar">
 				<li><a href="indice.html"> PRINCIPAL </a></li>
 				<li><a href="estudios.html"> ESTUDIOS EFECTUADOS </a></li>
 				<li><a href="exlab.html"> EXPERIENCIA LABORAL </a></li>
 				<li><a href="referencias.html"> REFERENCIAS LABORALES </a></li>
 			</ul>
-		</nav>
+		
 	</header>
 	
 	
